// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Async Select 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 bwlVAU Spaceweb__Space-sc-1abqisc-0 zryoY"
                        style="transform: translate(-0px,-0px);"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 fZwZkm"
                          color="shade.980"
                          data-testid="ds-text"
                          value="oranges"
                          width="auto"
                        >
                          Fruits
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          placeholder="Select"
                          type="text"
                          value="oranges"
                        />
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            fill="rgba(22, 47, 86, 0.38)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Select Grouped Select 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 bwlVAU Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Fruits
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          placeholder="Select"
                          type="text"
                          value=""
                        />
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            fill="rgba(22, 47, 86, 0.38)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Select Select With Controls 1`] = `
<div>
  <div>
    <div>
      <div />
      <div
        data-testid="component-wrapper"
      >
        <div>
          <div
            class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
          >
            <div
              class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 lgHtgi"
            >
              <div
                class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hogGzB"
              >
                <div
                  class="Viewweb__View-sc-1o0hmxm-0 eayzPs Flexweb__Flex-sc-1yhcoea-0 hfOCsH"
                >
                  <div
                    class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InteractionContainer-sc-18gz688-3 hMqHIj"
                  >
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__FillContainer-sc-18gz688-2 jxHNUe Spaceweb__Space-sc-1abqisc-0 fAtZGf Sizeweb__Size-sc-1e5yf1-0 dCxfKl"
                    >
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 Labelweb__FloatView-sc-1eubdu6-0 bwlVAU Spaceweb__Space-sc-1abqisc-0 zryoY"
                      >
                        <label
                          class="Textweb__Text-sc-1qrdpx3-0 Labelweb__StyledText-sc-1eubdu6-1 dtOgfF"
                          color="shade.980"
                          data-testid="ds-text"
                          value=""
                          width="auto"
                        >
                          Fruits
                        </label>
                      </div>
                      <div
                        class="Viewweb__View-sc-1o0hmxm-0 TextInputweb__InputContainer-sc-18gz688-0 bxHyXK Sizeweb__Size-sc-1e5yf1-0 ivlOax Flexweb__Flex-sc-1yhcoea-0 kSCwNs"
                      >
                        <input
                          class="TextInputweb__StyledInput-sc-18gz688-1 hxHBWr Sizeweb__Size-sc-1e5yf1-0 exhaHT Spaceweb__Space-sc-1abqisc-0 gvLSev Flexweb__Flex-sc-1yhcoea-0 fCJFon"
                          data-testid="ds-text-input"
                          placeholder="Select Fruits"
                          type="text"
                          value=""
                        />
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 24 24"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                            fill="rgba(22, 47, 86, 0.38)"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="Viewweb__View-sc-1o0hmxm-0 Lineweb__Line-sc-1xfvg0y-0 kNJYXM"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="layerTestId"
          id="layerHost"
        />
      </div>
    </div>
  </div>
  <div
    data-testid="layerTestId"
    id="layerHost"
  />
</div>
`;
